# lumen

./: .gitignore  .gitmodules  CMakeLists.txt  CodingStyle.txt  README.md
Assets/Config/: AssetSetting.json  BasicSetting.json
Dependencies/: CMakeLists.txt
cmake/: SetupToolchain.cmake
cmake/Toolchain/: Clang-Default.cmake  Gnu-Default.cmake
src/: CMakeLists.txt  Lumen.hpp  main.cpp
src/Action/: Action.hpp  ActionKindRecord.hpp  ActionManager.hpp  ActionStatusBuffer.hpp  KeyToActionMap.hpp
src/Core/Math/: Vector.hpp
src/Core/Memory/: ReadWritePtr.hpp
src/ECS/Components/: Components.hpp
src/ECS/Entity/: Entity.hpp  EntityManager.hpp
src/ECS/System/: Collision.hpp  LifespanUpdate.hpp  Movement.hpp
src/ECS/System/Debug/: DrawBoundingBox.hpp
src/LayerStack/: Layer.hpp  LayerStack.hpp
src/Log/: DebugLog.hpp  DebugSignal.cpp
src/LumenDef/: ConstexprIf.hpp
src/Map/: MapGener.hpp
src/Physics/: AABB.hpp
src/Render/Window/: RenderWindow.hpp
src/Render/Window/Event/: Event.hpp
src/ResourceManager/: ResourceDef.hpp  ResourceManager.hpp
src/Scene/: GamePlayScene.hpp  MenuScene.hpp  Scene.hpp  SceneManager.hpp
src/Scene/GamePlayScene/: GamePlayScene.hpp
src/Scene/GamePlayScene/GamePlayLayer/: GameWorldLayer.hpp  TestBackgroundLayer.hpp  TestUILayer.hpp
src/Scene/MenuScene/: MenuScene.hpp
src/Scene/MenuScene/MenuLayer/: TestBackgroundLayer.hpp  TestUILayer.hpp
src/Scene/PreGameScene/: PreGameScene.hpp
src/Scene/PreGameScene/PreGameLayer/: BackgroundLayer.hpp  PreGameUILayer.hpp
src/UI/: UIManager.hpp
src/UI/Components/: BasicUIComponent.hpp  Button.hpp  Menu.hpp  Panel.hpp
src/Utility/: Grid.hpp
src/Utility/AssetGenerator/: AssetGenerator.cpp  AssetGeneratorData.hpp  DoCommand.hpp  EventHandler.hpp  GrassGenerator.hpp
src/Utility/Json/: JsonDef.cpp  JsonDef.hpp  ReadJson.hpp
src/Utility/ProceduralContentGeneration/: CellularAutomata.hpp  Grid.hpp  PerlinNoise.hpp
src/Utility/Random/: Lehmer.hpp  RandomSeedGenerator.hpp
src/Utility/TileMap/: CreateTileMap.hpp
src/Utility/Unicode/: UnicodeString.hpp
src/VisualProfiling/: VisualProfiler.hpp
tests/: CMakeLists.txt
tests/Action/: CMakeLists.txt  TestActionManager.cpp
tests/Core/: CMakeLists.txt
tests/Core/Math/: CMakeLists.txt  TestVector.cpp
tests/ECS/: CMakeLists.txt
tests/ECS/Components/: CMakeLists.txt  TestAnimation.cpp
tests/ECS/Entity/: CMakeLists.txt  TestEntityManager.cpp
tests/ECS/System/: CMakeLists.txt  TestLifespanUpdate.cpp  TestMovement.cpp
tests/ECS/System/Debug/: CMakeLists.txt  TestDrawBoundingBox.cpp
tests/LayerStack/: CMakeLists.txt  TestLayerStack.cpp
tests/Log/: CMakeLists.txt  TestDebugLog.cpp
tests/Physics/: CMakeLists.txt  TestPhysics.cpp
tests/ResourceManager/: CMakeLists.txt  TestResourceManager.cpp
tests/UI/: CMakeLists.txt  TestUIManager.cpp
tests/UI/Components/: CMakeLists.txt  TestButton.cpp  TestMenu copy.cpp  TestMenu.cpp
tests/Utility/: CMakeLIsts.txt  CMakeLists.txt
tests/Utility/AssetGenerator/: AssetGenerator.cpp  AssetGeneratorData.hpp  CMakeLists.txt  Command.hpp  DoCommand.hpp  EventHandler.hpp  README.md  TestGrassGenerator copy.cpp  TestGrassGenerator.hpp  Undo.hpp
tests/Utility/AssetGenerator/ResourceManager/: AssetGeneratorRM.hpp
tests/Utility/AssetGenerator/UI/: AssetGeneratorUIM.hpp
tests/Utility/Json/: CMakeLists.txt  TestReadJson.cpp  test.json
tests/Utility/ProceduralContentGeneration/: CMakeLists.txt  TestCellularAutomata.cpp  TestPerlinNoise.cpp
tests/Utility/Random/: CMakeLists.txt  TestLehmer.cpp  TestRandomSeedGenerator.cpp
tests/Utility/TileMap/: CMakeLists.txt  TestCreateTileMap.cpp  config.json
